# ironscribe

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: mongodb_logging_example.rs
src/: lib.rs  macros.rs
src/core/: basic_logger.rs  log_entry.rs  log_service.rs  log_unit.rs  mod.rs
src/destinations/: console.rs  mod.rs  mongodb.rs  postgres.rs
src/service/: default.rs  mod.rs
tests/: basic_log_service.rs  console_integration_test.rs
