[package]
name = "ironscribe"
version = "0.1.0"
edition = "2024"
description = "Rust based logging service with optional generic database integration capabilities"
license = "MIT"
repository = "https://github.com/Pastho/ironscribe.git"

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }