[package]
name = "ironscribe"
version = "0.1.0"
edition = "2024"
description = "A flexible and extensible logging framework for Rust applications with support for multiple destinations and colored console output"
license = "MIT"
repository = "https://github.com/Pastho/ironscribe.git"
homepage = "https://github.com/Pastho/ironscribe"
documentation = "https://docs.rs/ironscribe"
readme = "README.md"
keywords = ["logging", "async", "mongodb", "postgresql", "console"]
categories = ["development-tools::debugging"]
authors = ["Thomas Pasberg"]

[features]
default = ["console"]
mongo = ["mongodb", "console"]
postgres = ["tokio-postgres", "console"]
console = []

[dependencies]
owo-colors = "4.2.2"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.227", features = ["derive"] }

mongodb = { version = "3.3.0", optional = true }
tokio-postgres = { version = "0.7.14", optional = true }
async-trait = "0.1.89"
rand = "0.9.2"
futures = "0.3.31"